css.css
#main {
    background-color: #feeee8;
    width: 1002px;
    height: 780px;
}
/* navbar */

.navbar {
  z-index: 1;
}
ul {
    width: 1002px;
    list-style-type: none;
    margin: 0 auto;
    padding: 0;
    overflow: hidden;
    background-image: linear-gradient(to bottom, white, #d5aa90);
    opacity: 0.85;
    text-align: center;
    font-weight: bold;
    border-width: 5px;
    border-radius: 4px;
    font-size: 15px;
    /*display: inline-block;*/
}

li {
    display: inline-block;
}

li a,
.dropbtn {
    display: inline-block;
    color: black;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

li a:hover,
.dropdown:hover .dropbtn {
    font-size: 15.5px;
    background-color: #feeee9;
}

li.dropdown {
    display: inline-block;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1000;
}

.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    text-align: left;
}

.dropdown-content a:hover {
    background-color: #f1f1f1;
}

.dropdown-content a {
    float: none;
}

.dropdown-content {
  padding: 0px;
  position: absolute;
  z-index: 1;
}
.dropdown:hover .dropdown-content {
    display: block;

}

body {
    /*margin: 0 !important;
    padding: 0 !important;*/
    /*background-color: white;*/
    background-image: url("maple.jpg");
    height: 1000px;
    width: 99.1%;


    /* Center and scale the image nicely */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

#head {
    width: 1002px;
    background-image: linear-gradient(to top left, #feeee0, white);
    /* #FFF9F8 */
    opacity: 0.95;
}

#chineseHeading {
    font-size: 65px;
    letter-spacing: 7px;
    font-family: "Microsoft Yahei";
    font-weight: lighter;
    /* font-family: 'Hiragino Kaku Gothic Pro', 'WenQuanYi Zen Hei', '微軟正黑體', '蘋果儷中黑', Helvetica, Arial, sans-serif; */
}

#englishHeading {
    font-size: 21.3px;
    font-weight: bolder;
    margin-top: 200px;
    font-family: "Oleo Script Swash Caps";
    letter-spacing: 2.5px;
}

ul {
    margin-top: 0px;
}

#whole {
    -webkit-box-shadow: 0px 0px 10px 1px #ddd;
    box-shadow: 0px 0px 10px 1px #ddd;
    width: 1002px;
}

#logo {
    width: 169px;
    height: 164px;
}
/* slideshow */

* {
    box-sizing: border-box;
}

.mySlides {
    display: none;
}

img {
    vertical-align: middle;
}
/* Slideshow container */

.slideshow-container {
    max-width: 1000px;
    position: inherit;
    margin: auto;
    z-index: 0;
}
/* Next & previous buttons */

.prev,
.next {
    cursor: pointer;
    position: inherit;
    top: 50%;
    width: auto;
    padding: 16px;
    margin-top: -22px;
    color: white;
    font-weight: bold;
    font-size: 18px;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
    user-select: none;
}
/* Position the "next button" to the right */

.next {
    right: 0;
    border-radius: 3px 0 0 3px;
}
/* On hover, add a black background color with a little bit see-through */

.prev:hover,
.next:hover {
    background-color: rgba(0, 0, 0, 0.8);
}
/* Caption text */

.text {
    color: #f2f2f2;
    position: relative;
    width: 97%;
    bottom: 60px;
    padding: 16px 24px;
    background: rgba(0, 0, 0, 0.5);
    box-sizing: border-box;
    text-align: center;
}
/* Number text (1/3 etc) */

.numbertext {
    color: #f2f2f2;
    font-size: 12px;
    padding: 8px 12px;
    position: absolute;
    top: 0;
}
/* The dots/bullets/indicators */

.dot {
    cursor: pointer;
    height: 15px;
    width: 15px;
    margin: 0 2px;
    background-color: #bbb;
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
}

.active,
.dot:hover {
    background-color: #717171;
}
/* Fading animation */

.fade {
    -webkit-animation-name: fade;
    -webkit-animation-duration: 1.5s;
    animation-name: fade;
    animation-duration: 1.5s;
}

@-webkit-keyframes fade {
    from {
        opacity: .4
    }
    to {
        opacity: 1
    }
}

@keyframes fade {
    from {
        opacity: .4
    }
    to {
        opacity: 1
    }
}

